# orange

./: CHANGELOG.md  DEPLOY.md  DEPLOYMENT_GUIDE.md  DEVELOPER.md  DEVELOPMENT.md  Dockerfile  README.md  check_cols.py  check_users.sql  deploy-frontend-tar.ps1  deploy-frontend.ps1  deploy-frontend.sh  deploy-pack.ps1  deploy-windows.bat  deploy.sh  docker-compose.local.yml  docker-compose.yml  extract.py  i18n.js  index.html  list_users.sql  nginx.conf  style.css  test-images.sh
api/: index.js
apps/desktop/: package.json  tauri.conf.json
apps/desktop/src-tauri/: Cargo.toml
apps/desktop/src-tauri/src/: lib.rs
apps/mobile/: capacitor.config.json  package.json
deploy/: nginx.conf
desktop/OrangeDesktop/: App.xaml  App.xaml.cs  OrangeDesktop.csproj
docs/: ARCHITECTURE.md  CLOUD_DEPLOY.md  MAINTENANCE.md  PACKAGING.md
e2e/: home.spec.js  login.spec.js
server-go/: Dockerfile  data.db  data.db-shm  data.db-wal  data_new.db  data_new.db-shm  data_new.db-wal  go.mod  go.sum
server-go/cmd/: main.go
server-go/migrations/: 001_add_features.sql
server-go/tests/: database_test.go
src/: App.vue  main.js  style.css
src/api/: index.js
src/components/: AnalyticsDashboard.vue  Avatar.vue  AvatarCropper.vue  BaseCard.vue  (+33 more)
tests/: load_test.js  load_test_1000.js  server_load_test.jmx
views/: Add.vue  Admin.vue  BloggerDetail.vue  CalendarPage.vue  Chat.vue  Forums.vue  Home.vue  InvalidBloggers.vue  Layout.vue  Log.vue  Login.vue  My.vue  MyBloggers.vue  PublicUsers.vue  Statistics.vue  Team.vue  TeamHome.vue  UserDetail.vue  UserSettings.vue  Workflow.vue
(+130 files in other folders)
