[package]
name = "orange-desktop"
version = "1.0.0"
description = "Orange Blogger Manager - Desktop Application"
authors = ["Orange Team"]
edition = "2021"

[lib]
name = "orange_desktop_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["api-all"] }
tauri-plugin-fs = "1"
tauri-plugin-dialog = "1"
tauri-plugin-notification = "1"
tauri-plugin-shell = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
calamine = "0.22"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
mobile = []
